fixed layout issues

--- a/assets/css/usa-gov-site.css
+++ b/assets/css/usa-gov-site.css
@@ -675,7 +675,7 @@ abbr[title="required"] {
     text-align: left;
     background-image: url(/assets/img/dash.svg), linear-gradient(transparent, transparent);
     background-repeat: no-repeat;
-    background-color: #f0f0f0;
+    background-color: #f2f2f2;
     background-position: right 1.25rem center;
     background-size: 1.5rem;
     color: #1b1b1b;
@@ -735,6 +735,7 @@ abbr[title="required"] {
     background-image: url(/assets/img/plus.svg), linear-gradient(transparent, transparent);
     background-repeat: no-repeat;
     background-size: 1.5rem
+
 }
 
 .usa-banner {
@@ -743,7 +744,7 @@ abbr[title="required"] {
     top: 0;
     left: 0;
     height: 30px;
-    background: #f0f0f0;
+    background: #f2f2f2;
     width: 100%;
     position: fixed;
     z-index: 9999;
@@ -764,27 +765,22 @@ abbr[title="required"] {
     font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
     font-size: 1.06rem;
     line-height: 1.5;
-    background-color: #f0f0f0;
+    background-color: #f2f2f2;
 }
 
 .usa-banner__header, .usa-banner__content {
-    color: #1b1b1b;
+    color: #000;
 }
 
 .usa-banner__content {
     font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
-    font-size: 1.06rem;
     line-height: 1.5;
     margin-right: auto;
-    max-width: 64rem;
-    padding-right: 1rem;
     font-size: 1rem;
     overflow: hidden;
-    padding-bottom: 1rem;
-    padding-left: 0.5rem;
-    padding-top: 0.25rem;
+    padding: 0.25rem 1rem 1rem 30px;
     width: 100%;
-    background-color: #F0F0F1;
+    background-color: #f2f2f2;;
 }
 
 @media all and (min-width: 64em) {
@@ -811,7 +807,6 @@ abbr[title="required"] {
 .usa-banner__content p:first-child {
     margin: 0;
     line-height: 1.5;
-    font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
     text-align: left;
     font-size: .95em;
 }
@@ -840,13 +835,13 @@ abbr[title="required"] {
 
 .usa-banner__inner {
     padding-left: 1rem;
-    padding-right: 1rem;
     margin-right: auto;
     max-width: 64rem;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    padding-right: 0
+    padding-right: 0;
+    margin-top: -1px;
 }
 
 @media all and (min-width: 64em) {
@@ -889,13 +884,13 @@ abbr[title="required"] {
 .usa-banner__header-text {
     margin-bottom: 0;
     margin-top: 0;
-    font-size: 0.8rem;
-    line-height: 1.1
+    font-size: 12px;
+    line-height: 1.1;
     font-family: "public_sans","Open Sans",helvetica,sans-serif;
 }
 
 .usa-banner__header-action {
-    color: #005ea2;
+    color: #000;
     line-height: 1.1;
     margin-bottom: 0;
     margin-top: 2px;
@@ -1013,7 +1008,7 @@ abbr[title="required"] {
     vertical-align: baseline;
     color: #005ea2;
     display: block;
-    font-size: 0.8rem;
+    font-size: 12px;
     height: auto;
     line-height: 1.1;
     padding-top: 0;
@@ -1120,7 +1115,11 @@ abbr[title="required"] {
     }
 
     .usa-banner__button:after {
-        position: absolute
+        position: absolute;
+        margin-left: 6px;
+        height: 20px;
+        margin-top: -2px;
+        background-color: #000000;
     }
 
     .usa-banner__button:hover {
@@ -1129,7 +1128,8 @@ abbr[title="required"] {
 }
 
 .usa-banner__button[aria-expanded="false"] {
-    background-image: none
+    background-image: none;
+    margin-top: 2px;
 }
 
 .usa-banner__button[aria-expanded="true"] {
@@ -1180,23 +1180,25 @@ abbr[title="required"] {
     .usa-banner__button[aria-expanded="true"] {
         height: auto;
         padding: 0;
-        position: relative
+        position: relative;
+        margin-top: 1px;
     }
 
     .usa-banner__button[aria-expanded="true"]::after {
         background: url(/assets/img/arrow_up.svg) no-repeat center/contain;
         display: inline-block;
-        height: 1rem;
-        width: 1rem;
+        height: 20px;
+        width: 38px;
         content: "";
         vertical-align: middle;
-        margin-left: 2px
+        margin-left: -6px;
+        margin-top: -2px;
     }
 
     @supports (-webkit-mask: url("")) or (mask: url("")) {
         .usa-banner__button[aria-expanded="true"]::after {
             background: none;
-            background-color: #005ea2;
+            background-color: #000;
             -webkit-mask: url(/assets/img/arrow_up.svg) no-repeat center/contain;
             mask: url(/assets/img/arrow_up.svg) no-repeat center/contain
         }
@@ -1210,7 +1212,7 @@ abbr[title="required"] {
      }
 
     .usa-banner__button[aria-expanded="true"]:after {
-        position: absolute
+        position: absolute;
     }
 }
 
@@ -1218,7 +1220,8 @@ abbr[title="required"] {
     position: absolute;
     left: -999em;
     right: auto;
-    text-decoration: underline
+    text-decoration: underline;
+    color: #0071bc;
 }
 
 @media all and (min-width: 40em) {
@@ -1229,13 +1232,17 @@ abbr[title="required"] {
 }
 
 .usa-banner__icon {
-    width: 2.5rem
+    width: 38px
 }
 
 .usa-js-loading .usa-banner__content {
     position: absolute;
     left: -999em;
-    right: auto
+    right: auto;
+}
+
+.usa-banner__content *{
+    font-family: "Open Sans",Helvetica,sans-serif;
 }
 
 .usa-header {
@@ -2427,7 +2434,6 @@ table.layouttable, table.layouttable tr {
 }
 
 .grid-row.grid-gap-lg > * {
-    padding-left: 0.75rem;
     padding-right: 0.75rem
 }
 
@@ -2813,7 +2819,8 @@ table.layouttable, table.layouttable tr {
 .grid-col-auto {
     flex: 0 1 auto;
     width: auto;
-    max-width: 100%
+    max-width: 100%;
+    padding-bottom: 4px;
 }
 
 .grid-col-fill {
@@ -3471,3 +3478,4 @@ table.layouttable, table.layouttable tr {
     vertical-align: inherit;
     width: calc(1.5ex * 52 / 64);
 }
+
